# Lectures

Discovery/list-client-binary/: main.cpp
Discovery/list-server-binary/: CMakeLists.txt
Discovery/name-server-binary/: CMakeLists.txt
IPC/pipes/: .gitignore  CMakeLists.txt  main.cpp
RPC/key-value-client-binary/: CMakeLists.txt  main.cpp
RPC/key-value-client-binary/include/: RemoteKeyValueStore.h  SocketUtils.h  types.h
RPC/key-value-client-binary/src/: RemoteKeyValueStore.cpp  SocketUtils.cpp  types.cpp
RPC/list-client/: CMakeLists.txt  main.cpp
RPC/list-client-binary/: CMakeLists.txt  main.cpp
RPC/list-client-binary/include/: RemoteList.h  RemoteListStub.h  remote_list.h  remote_list_stub.h  types.h
RPC/list-client-binary/src/: RemoteList.cpp  RemoteListStub.cpp  remote_list.cpp  remote_list_stub.cpp  socket_utils.cpp  types.cpp
RPC/list-client/include/: remote_list.h  remote_list_stub.h  socket_utils.h  types.h
RPC/list-client/src/: remote_list.cpp  remote_list_stub.cpp  socket_utils.cpp  types.cpp
RPC/list-server/: CMakeLists.txt  main.cpp
RPC/list-server-binary/: CMakeLists.txt
Sockets/echo-client/: CMakeLists.txt  main.cpp
Sockets/echo-server/: main.cpp
Sockets/echo-server - Copy/: CMakeLists.txt
Sockets/echo-server - assignment 3/: main.cpp
Sockets/echo-server-improved/: CMakeLists.txt  main.cpp
Sockets/key-value-application/: CMakeLists.txt  main.cpp
Sockets/key-value-client/: CMakeLists.txt  main.cpp
Sockets/key-value-multi-server/: CMakeLists.txt  main.cpp
Sockets/key-value-multi-server-flawed/: CMakeLists.txt  main.cpp
(+47 files in other folders)
